Ukrainian translate and pages structure

--- a/package.json
+++ b/package.json
@@ -38,10 +38,9 @@
     "@angular/platform-browser": "4.3.2",
     "@angular/platform-browser-dynamic": "4.3.2",
     "@angular/router": "4.3.2",
-    "@asymmetrik/angular2-leaflet": "2.1.4",
+    "@asymmetrik/ngx-leaflet": "^2.5.0",
     "@nebular/auth": "2.0.0-rc.2",
     "@nebular/theme": "2.0.0-rc.2",
-    "express": "^4.15.4",
     "@ng-bootstrap/ng-bootstrap": "1.0.0-alpha.26",
     "@swimlane/ngx-charts": "5.2.0",
     "angular2-chartjs": "^0.3.0",
@@ -52,6 +51,7 @@
     "classlist.js": "1.1.20150312",
     "core-js": "2.4.1",
     "d3": "4.8.0",
+    "express": "^4.15.4",
     "font-awesome": "4.7.0",
     "intl": "1.2.5",
     "ionicons": "2.0.1",
