Profile page started

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@angular/platform-browser-dynamic": "4.3.2",
     "@angular/router": "4.3.2",
     "@asymmetrik/ngx-leaflet": "^2.5.0",
+    "@cloudinary/angular-4.x": "^1.0.0",
     "@nebular/auth": "2.0.0-rc.2",
     "@nebular/theme": "2.0.0-rc.2",
     "@ng-bootstrap/ng-bootstrap": "1.0.0-alpha.26",
@@ -49,6 +50,7 @@
     "chart.js": "2.5.0",
     "ckeditor": "4.6.2",
     "classlist.js": "1.1.20150312",
+    "cloudinary-core": "^2.3.0",
     "core-js": "2.4.1",
     "d3": "4.8.0",
     "express": "^4.15.4",
