--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "start:hmr": "ng serve --hmr",
+    "start:hmr": "ng serve --hmr -e=hmr",
     "start:aot": "ng serve --aot",
     "build": "rimraf dist && ng build",
     "build:prod": "npm run build -- --prod",
@@ -77,6 +77,7 @@
     "@angular/cli": "1.4.2",
     "@angular/compiler-cli": "4.3.2",
     "@angular/language-service": "4.3.2",
+    "@angularclass/hmr": "^2.1.3",
     "@types/d3-color": "1.0.4",
     "@types/jasmine": "2.5.38",
     "@types/jasminewd2": "2.0.2",
