--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@angular/platform-browser": "4.3.2",
     "@angular/platform-browser-dynamic": "4.3.2",
     "@angular/router": "4.3.2",
+    "@angularclass/hmr": "^2.1.3",
     "@asymmetrik/ngx-leaflet": "^2.5.0",
     "@cloudinary/angular-4.x": "^1.0.0",
     "@nebular/auth": "2.0.0-rc.2",
@@ -52,6 +53,7 @@
     "classlist.js": "1.1.20150312",
     "cloudinary-core": "^2.3.0",
     "core-js": "2.4.1",
+    "cors": "^2.8.4",
     "d3": "4.8.0",
     "express": "^4.15.4",
     "font-awesome": "4.7.0",
@@ -65,7 +67,6 @@
     "ngx-echarts": "1.2.2",
     "normalize.css": "6.0.0",
     "roboto-fontface": "0.8.0",
-    "@angularclass/hmr": "^2.1.3",
     "rxjs": "5.4.2",
     "socicon": "^3.0.5",
     "tether": "1.4.0",
