--- a/package.json
+++ b/package.json
@@ -73,7 +73,9 @@
     "tinymce": "4.5.7",
     "typeface-exo": "0.0.22",
     "web-animations-js": "2.2.5",
-    "zone.js": "0.8.16"
+    "zone.js": "0.8.16",
+    "ng2-bootstrap": "latest",
+    "ngx-bootstrap": "latest"
   },
   "devDependencies": {
     "@angular/cli": "1.4.2",
