--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "ng2-ckeditor": "1.1.6",
     "ng2-smart-table": "1.1.0",
     "ng2-tree": "2.0.0-alpha.5",
+    "ng2-truncate": "^1.3.11",
     "ngx-bootstrap": "latest",
     "ngx-echarts": "1.2.2",
     "normalize.css": "6.0.0",
