--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
     "zone.js": "0.8.16"
   },
   "devDependencies": {
-    "@angular/cli": "1.4.2",
+    "@angular/cli": "^1.6.3",
     "@angular/compiler-cli": "4.3.2",
     "@angular/language-service": "4.3.2",
     "@types/d3-color": "1.0.4",
@@ -106,6 +106,6 @@
     "ts-node": "3.0.4",
     "tslint": "5.4.2",
     "tslint-language-service": "0.9.6",
-    "typescript": "2.3.4"
+    "typescript": "^2.6.2"
   }
 }
