--- a/package.json
+++ b/package.json
@@ -106,6 +106,6 @@
     "ts-node": "3.0.4",
     "tslint": "5.4.2",
     "tslint-language-service": "0.9.6",
-    "typescript": "^2.6.2"
+    "typescript": "2.3.0"
   }
 }
