--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "@nebular/auth": "2.0.0-rc.2",
     "@nebular/theme": "2.0.0-rc.2",
     "@ng-bootstrap/ng-bootstrap": "1.0.0-alpha.26",
-    "@swimlane/ngx-charts": "5.2.0",
+    "@swimlane/ngx-charts": "^5.2.0",
     "angular2-chartjs": "^0.3.0",
     "angular2-text-mask": "^8.0.4",
     "angular2-toaster": "4.0.0",
@@ -62,6 +62,7 @@
     "ionicons": "2.0.1",
     "leaflet": "1.0.3",
     "nebular-icons": "1.0.6",
+    "ng-select": "latest",
     "ng2-bootstrap": "latest",
     "ng2-ckeditor": "1.1.6",
     "ng2-smart-table": "1.1.0",
@@ -77,8 +78,7 @@
     "tinymce": "4.5.7",
     "typeface-exo": "0.0.22",
     "web-animations-js": "2.2.5",
-    "zone.js": "0.8.16",
-    "ng-select": "latest"
+    "zone.js": "0.8.16"
   },
   "devDependencies": {
     "@angular/cli": "1.4.2",
