--- a/package.json
+++ b/package.json
@@ -28,12 +28,12 @@
     "npm": "~3.10.5"
   },
   "dependencies": {
-    "@angular/cli": "1.4.2",
-    "@angular/compiler-cli": "4.3.2",
     "@agm/core": "1.0.0-beta.0",
     "@angular/animations": "4.3.2",
+    "@angular/cli": "1.4.2",
     "@angular/common": "4.3.2",
     "@angular/compiler": "4.3.2",
+    "@angular/compiler-cli": "4.3.2",
     "@angular/core": "4.3.2",
     "@angular/forms": "4.3.2",
     "@angular/http": "4.3.2",
@@ -62,6 +62,8 @@
     "font-awesome": "4.7.0",
     "intl": "1.2.5",
     "ionicons": "2.0.1",
+    "jspdf": "^1.3.5",
+    "jspdf-autotable": "^2.3.2",
     "leaflet": "1.0.3",
     "nebular-icons": "1.0.6",
     "ng-select": "latest",
