--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "ngx-bootstrap": "latest",
     "ngx-echarts": "1.2.2",
     "normalize.css": "6.0.0",
+    "pdfmake": "^0.1.35",
     "roboto-fontface": "0.8.0",
     "rxjs": "5.4.2",
     "socicon": "^3.0.5",
